test/parse/func/bad-local-binding-no-type.txt
;;; ERROR: 1
(module (func (local $n)))
(;; STDERR ;;;
parse/func/bad-local-binding-no-type.txt:2:24: syntax error, unexpected ), expecting VALUE_TYPE
(module (func (local $n)))
                       ^
;;; STDERR ;;)
